--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
+        <allure.version>2.7.0</allure.version>
         <aspectj.version>1.9.2</aspectj.version>
         <allure.adapter.version>1.5.4</allure.adapter.version>
         <allure.maven.version>2.8</allure.maven.version>
@@ -47,6 +47,9 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-cucumber-jvm</artifactId>
             <version>2.7.0</version>
+            <!--<groupId>io.qameta.allure</groupId>-->
+            <!--<artifactId>allure-cucumber3-jvm</artifactId>-->
+            <!--<version>${allure.version}</version>-->
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
